...
                                        <include reference="aND-Vh-1i6"/>
                                        <include reference="p63-2i-F7G"/>
                                        <include reference="wa8-16-NOw"/>
                                    </mask>
                                </variation>
                            </view>
                            <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fwc-dd-7Ai" userLabel="userEnterView">
                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a valid 5 digit Zip Code!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vDB-Eg-wxr" userLabel="zipCodeError">
                                        <rect key="frame" x="144" y="70" width="297" height="21"/>
                                        <accessibility key="accessibilityConfiguration">
                                            <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <include reference="wLy-tq-C5w"/>
                                            </mask>
                                        </variation>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uIa-k3-vM0">
                                        <rect key="frame" x="349" y="112" width="49" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submitZipCodeButton" label="submitZipCodeButton"/>
                                        <state key="normal" title="Submit">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="submitButtonPressed:" destination="xFB-9D-DIO" eventType="touchUpInside" id="7O0-fp-qdQ"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zip Code" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BMC-4H-qh3">
                                        <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="zipCodeEntered" label="zipCodeEntered"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="97" id="Zlw-IY-1w2"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                        <variation key="default">
...
